# git-issues

./: GitIssue.hs  GitIssues.hs  Main.hs  README.md  git-issue.cabal  git-issues.cabal  shell.nix
src/GitIssues/: Config.hs  Model.hs  OptParser.hs
test/: generate_test_repo
