cabal-version: 3.0
name:          git-issues
version:       0.1.0.0

library
  exposed-modules: GitIssues
  build-depends:   base
                 , optparse-applicative

executable         git-issues
  main-is:         Main.hs
  other-modules:   GitIssues
  build-depends:   base
                 , git-issues
                 , optparse-applicative
