cabal-version: 3.0
name:          git-issues
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  ghc-options:        -Wall -O2

library
  import:          lang
  exposed-modules: GitIssues
                 , GitIssues.Model
  hs-source-dirs:  src
  build-depends:   base
                 , optparse-applicative

executable         git-issues
  import:          lang
  main-is:         Main.hs
  build-depends:   base
                 , git-issues
                 , optparse-applicative
