cabal-version:        3.0
name:                 git-issues
version:              0.1.0.0

common lang
  default-language:   Haskell2010
  ghc-options:        -Wall -O2
  default-extensions: OverloadedStrings

library
  import:             lang
  exposed-modules:    GitIssues
                    , GitIssues.Model
                    , GitIssues.OptParser
                    , GitIssues.Config
  hs-source-dirs:     src
  build-depends:      base
                    , cmark
                    , filepath
                    , tomland
                    , optparse-applicative
                    , text

executable            git-issues
  import:             lang
  main-is:            Main.hs
  build-depends:      base
                    , git-issues
